[package]
name = "rbit"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "multipart", "rustls-tls", "cookies"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
directories = "5.0"
config = "0.13"
serde_json = "1.0"
tabled = "0.6"
